src/literate/style.scss
body.literate .body pre:has(.code-row) {
  background: var(--bg2-color);
  border-radius: var(--mono-border-radius);
  overflow-x: auto;
  overscroll-behavior-x: none;
  padding: 0;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;

  code {
    padding-right: var(--gap);
  }

  .code-row {
    &:first-child {
      padding-top: var(--gap);
    }

    &:last-child {
      padding-bottom: var(--gap);
    }
  }
}

body.literate .literate-code-output {
  display: grid;
  grid-template-columns: 1fr;
  gap: var(--gap);
  font-size: var(--mono-font-size);

  > pre:last-child {
    white-space: pre-wrap;
  }

  @media (max-width: 899px) {
    > pre:first-child {
      margin-bottom: 0;
    }

    > pre:last-child {
      margin-top: 0;

      &::before {
        content: 'Output';
        display: block;
        font-size: var(--font-size-small);
        font-style: italic;
        color: var(--fg2-color);
      }
    }
  }

  @media (min-width: 900px) {
    grid-template-columns: 1fr 1fr;

    > pre:last-child {
      min-width: 150px;
    }
  }
}

